# remote-jobs

./: AGENTS.md  README.md  astro.config.ts  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/models/: user.py
app/views/: user_view.py
companies/: 1password.md  37signals.md  akamai.md  anomaly.md  appwrite.md  basecamp.md  bitwarden.md  brave.md  buffer.md  cal.com.md  canonical.md  cloudflare.md  codepen.md  coinbase.md  coreos.md  coursera.md  deno.md  digitalocean.md  discord.md  discourse.md  dnsimple.md  doist.md  dropbox.md  duckduckgo.md  epicgames.md  evilmartians.md  fiverr.md  fly.io.md  gitbook.md  github.md  glitch.md  hashicorp.md  httpie.md  huggingface.md  hugo.md  ipinfo.md  khanacademy.md  linear.md  lineplus.md  logrocket.md  (+25 more)
config/: admin.py  application.py  dashboard.py
nomads/livable/: china.tsv  climate.tsv  global.tsv  global_extra.tsv  lifestyle.tsv  visa.tsv
src/: content.config.ts  data.json
src/assets/: app.css  globals.css
src/components/: RegionSection.astro  Welcome.astro  city-card.astro  job-card.astro  region-section.astro
src/layouts/: Layout.astro  layout.astro
src/pages/: 404.astro  index.astro
src/pages/about/: index.md
src/pages/companies/: [id].astro  index.astro
src/pages/jobs/: index.astro
src/pages/livable/: [city].astro  index.astro
src/utils/: citiesData.ts  groupByRegion.ts
