[project]
name = "remote-jobs"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-admin (>=2.0.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "main"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

