[project]
name = "remote-jobs"
version = "0.1.0"
license = "MIT"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "arrow (>=1.4.0,<2.0.0)",
    "authlib (>=1.6.9,<2.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "flask-admin (>=2.0.2,<3.0.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "peewee (>=4.0.3,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "main"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"
